fix: updated user routes into user.routes
